<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" style="@style/code">MorseTable</string>
    <string name="description">This application is intended to teach basic Morse code using a logical tree-based, graphical presentation of the alphabet.</string>
    
    <string name="dit">·</string>
    <string name="dah">–</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="ae">Ä</string>
    <string name="oslash">Ö</string>
    <string name="agrave">À</string>
    <string name="uumlaut">Ü</string>
    <string name="ch">CH</string>
    
    <string name="_0">0</string> 
    <string name="_1">1</string> 
    <string name="_2">2</string> 
    <string name="_3">3</string> 
    <string name="_4">4</string> 
    <string name="_5">5</string> 
    <string name="_6">6</string> 
    <string name="_7">7</string> 
    <string name="_8">8</string> 
    <string name="_9">9</string> 
    
</resources>